--- a/README
+++ b/README
@@ -1,1 +1,4 @@
-doesnt work, half the code is lost to time 
+This project is from 2022.
+Half the code is lost to time.
+This is basically an overly complicated .png image 
+Feel free to to contact me about any questions at your-name@example.com
