--- a/README
+++ b/README
@@ -1,4 +1,6 @@
-This project is from 2022.
-Half the code is lost to time.
-This is basically an overly complicated .png image 
-Feel free to to contact me about any questions at your-name@example.com
+# THIS THING DOESNT WORK
+This code is from **2022** and the other 60% of it is lost to time
+>It is basicly an overcomplicated and poorly written .png image 
+
+[![Watch the thought process behind this project](https://i.imgur.com/5EKMAdz.jpeg)](https://www.youtube.com/watch?v=CzMobAOPD-A)
+
